@@ -1,3 +1,10 @@
+2018-04-06  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* Mscripts_arts/q2_oemiter.m: Now handles Q.FREQUENCY.NPOLY.
+
+	* Mscripts_arts/q2_inv.m (subfun4l2): L2I.FreqOffset is now a vector.
+	(subfun4retqs): Now handles Q.FREQUENCY.NPOLY.
+
 2018-04-04  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
 	* Mscripts_database/q2_check_l1b.m: Removed check that LO is
